# PertCF

./: CHANGELOG.md  CITATION.cff  DEPLOY.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: citing.md  concepts.md  index.md  install.md  parameters.md  quickstart.md
docs/api/: adapters.md  explainer.md  metrics.md  similarity.md
docs/examples/: custom_similarity.md  german_credit.md  knowledge.md
examples/: custom_similarity.py  pytorch_adapter.py  quickstart_german_credit.ipynb  quickstart_german_credit.py  quickstart_knowledge.ipynb  quickstart_knowledge.py
github/workflows/: publish.yml
src/pertcf/: __init__.py  adapters.py  core.py  metrics.py  similarity.py
tests/: test_pertcf.py
