[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pertcf"
version = "1.0.0"
description = "PertCF: Perturbation-based counterfactual explanations with SHAP-weighted feature attribution"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
  { name = "Betül Bayrak", email = "betul.bayrak@ntnu.no" },
]
keywords = [
  "counterfactual",
  "explainability",
  "xai",
  "interpretability",
  "shap",
  "perturbation",
  "counterfactual-explanations",
  "machine-learning",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy>=1.22",
  "pandas>=1.4",
  "scikit-learn>=1.1",
  "shap>=0.41",
]

[project.optional-dependencies]
torch = ["torch>=1.13"]
tensorflow = ["tensorflow>=2.10"]
viz = ["matplotlib>=3.5", "seaborn>=0.12"]
dev = [
  "pytest>=7",
  "pytest-cov",
  "ruff",
  "mypy",
  "hatch",
]
docs = [
  "mkdocs-material>=9",
  "mkdocstrings[python]>=0.22",
]

[project.urls]
Homepage      = "https://github.com/b-bayrak/PertCF-Explainer"
Documentation = "https://b-bayrak.github.io/PertCF-Explainer"
Repository    = "https://github.com/b-bayrak/PertCF-Explainer"
Issues        = "https://github.com/b-bayrak/PertCF-Explainer/issues"
Paper         = "https://doi.org/10.1007/978-3-031-47994-6_13"
Changelog     = "https://github.com/b-bayrak/PertCF-Explainer/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/pertcf"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=pertcf --cov-report=term-missing"
